--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "framer-motion": "^6",
     "next": "12.1.6",
+    "next-auth": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
