--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Achraf Faddoul AKA Q-beast",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,19 +21,38 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/common": "^9.0.7",
+    "@nestjs/core": "^9.0.7",
+    "@nestjs/mapped-types": "^1.1.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.7",
+    "@nestjs/platform-socket.io": "^9.0.9",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/swagger": "^6.0.5",
+    "@nestjs/testing": "^9.0.7",
+    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/websockets": "^9.0.9",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express-session": "^1.17.4",
+    "@types/passport": "^1.0.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-42": "^1.2.6",
+    "pg": "^8.7.3",
+    "postgres": "^3.2.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
