--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,12 +1,12 @@
 {
-	"editor.formatOnSave": true,
-	"typescript.suggest.autoImports": true,
-	"typescript.suggest.paths": true,
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
-	},
-	"editor.detectIndentation": false,
-	"editor.insertSpaces": false,
-	"typescript.tsdk": "node_modules/typescript/lib",
-	"cSpell.language": "en-GB"
+  "editor.formatOnSave": true,
+  "typescript.suggest.autoImports": true,
+  "typescript.suggest.paths": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.detectIndentation": false,
+  "editor.insertSpaces": true,
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.language": "en-GB"
 }
