--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "next-auth": "^4.10.1",
+    "postgresql-client": "^2.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
