--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,17 +1,13 @@
-FROM node:alpine
+FROM node:16-alpine
 
-WORKDIR /src/app
+USER node
 
-COPY package.json yarn.lock  ./
+RUN mkdir /home/node/client
 
-RUN yarn install
-COPY next.config.js .
+WORKDIR /home/node/client
 
-COPY pages ./pages
-COPY public ./public
-COPY styles ./styles
-
-EXPOSE 3002
-EXPOSE 49153
-
-CMD ["yarn", "dev -p 3002"]
+CMD "sleep" "5" &&\
+    "echo" "next is up..."  &&\
+    "npm" "i" &&\
+    "npm" "run" "build" &&\
+    "npm" "run" "start"
