--- a/client/package.json
+++ b/client/package.json
@@ -6,22 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "cd .. && husky install ./client",
+    "format": "prettier --write ./**/*.{ts,tsx}"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.6.0",
+    "@chakra-ui/react": "^2.2.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@react-three/fiber": "^8.7.2",
+    "framer-motion": "^7.2.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.143.0"
+    "three": "^0.144.0"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "@types/three": "^0.143.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "next-transpile-modules": "^9.0.0",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
+  },
+  "engines": {
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm",
+    "pnpm": ">= 7.5.2"
   }
 }
