add redis service for authentication sessions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,14 @@ services:
     networks:
       - backend-net
     restart: always
+  
+  redis_auth_session:
+    container_name: "transcendence_redis"
+    image: redis:alpine
+    networks:
+      - backend-net
+    restart: always
+
 
 volumes:
   postgres-data:
