--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@react-three/cannon": "^6.4.0",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.7.2",
     "framer-motion": "^7.2.1",
