--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@types/passport": "^1.0.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
