[TRAN-3] Add all required env variables

--- a/backend/.env.app.dev.example
+++ b/backend/.env.app.dev.example
@@ -1,7 +1,21 @@
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
-DB_TYPE=
-NODE_ENV=
+# DB ENV
+POSTGRES_USER='<POSTGRES_USER>'
+POSTGRES_HOST='<POSTGRES_HOST>'
+POSTGRES_PASSWORD='<POSTGRES_PASSWORD>'
+POSTGRES_DB='<POSTGRES_DB>'
+POSTGRES_PORT='<POSTGRES_PORT>'
+DB_TYPE='<DB_TYPE>'
+
+# Node ENV
+NODE_ENV=dev
+
+# INTRA ENV
+CLIENT_ID='<CLIENT_ID>'
+CLIENT_SECRET='<CLIENT_SECRET>'
+CALLBACK_URL=/api/auth/42/callback
+
+# Session ENV
+SESSION_SECRET='<SESSION_SECRET>
+
+# Redis
+REDIS_URI=redis://redis
