--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.7.2",
     "framer-motion": "^7.2.1",
+    "immer": "^9.0.16",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
