chore: migrate to next 13

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -7,6 +7,7 @@
   },
   "editor.detectIndentation": false,
   "editor.insertSpaces": true,
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.language": "en-GB"
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "cSpell.language": "en-GB",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
