--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express-session": "^1.17.4",
     "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
@@ -43,6 +44,7 @@
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
     "reflect-metadata": "^0.1.13",
