feat: setup backend game module and websocket

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "generate": "nest g",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -27,12 +28,12 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.7",
-    "@nestjs/platform-socket.io": "^9.0.9",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/testing": "^9.0.7",
     "@nestjs/typeorm": "^9.0.0",
-    "@nestjs/websockets": "^9.0.9",
+    "@nestjs/websockets": "^9.2.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express-session": "^1.17.4",
     "@types/passport": "^1.0.9",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.4",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
