--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,17 +1,8 @@
-FROM node:alpine
+FROM node:16-alpine
 
-WORKDIR /src/app
+RUN npm i -g pnpm
+RUN mkdir /home/client
 
-COPY package.json yarn.lock  ./
+WORKDIR /home/client
 
-RUN yarn install
-COPY next.config.js .
-
-COPY pages ./pages
-COPY public ./public
-COPY styles ./styles
-
-EXPOSE 3002
-EXPOSE 49153
-
-CMD ["yarn", "dev -p 3002"]
+CMD "pnpm" "i" && "pnpm" "run" "dev"
